[package]
name = "unit-conv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
regex = "1.10.3"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde_json = "1.0.115"
strum = "0.26.2"
strum_macros = "0.26.2"
